fix(puf): cut off checkmark

--- a/express/blocks/puf/puf.css
+++ b/express/blocks/puf/puf.css
@@ -321,7 +321,7 @@ main .puf .puf-right {
         top: 50%;
         transform: translateY(-50%);
         width: 13px;
-        height: 11px;
+        height: 11.5px;
         background-color: #5C5CE0;
         -webkit-mask-image: url('/express/blocks/puf/check.svg');
         mask-image: url('/express/blocks/puf/check.svg');
